--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -20,10 +20,7 @@
           <i class="fa fa-print"></i>
         </a>
       </mn-grid>
-      <mn-grid-pager page-changed='ctrl.getPage(page)'
-                     page-count='ctrl.pageCount'
-                     current-page='ctrl.page'
-                     client-view-pager-style='!!ctrl.filters && ctrl.fullyLoaded'>
+      <mn-grid-pager>
       </mn-grid-pager>
     </div>
   </div>
