--- a/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
+++ b/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
@@ -32,7 +32,7 @@
       <button type="button"
               class="btn filter-bar-button"
               ng-model="filterBar.owner.quickFilterShown"
-              ng-click="filterBar.owner.toggleQuickFilter(!filterBar.quickFilterShown)"
+              ng-click="filterBar.owner.toggleQuickFilter()"
               btn-checkbox
               btn-checkbox-true="true"
               btn-checkbox-false="false"
