--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -6,7 +6,9 @@
   </div>
   <div class="row mn-grid-layout-row">
     <div class="col-xs-12">
-      <mn-grid>
+      <mn-grid mn-select="single"
+               mn-select-type="check"
+               mn-on-select="ctrl.onItemSelect(selectedItems)">
         <a target="_blank" ng-href="{{ctrl.reportLocation}}/report_{{item.Order_ID}}.pdf">
           <i class="fa fa-file-pdf-o"></i>
         </a>
