selected items as grid's service
Our mn-grid directive is pretty stateless and it just shows owner's controller buffer data as it requested by url params, so I have made an angular service expecting grid's ID to return selected items for exact grid. It allow us to have many grids selecting items independently. This solution makes only one cons because we need to pass unique mn-id to our grid directive.

Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -6,7 +6,8 @@
   </div>
   <div class="row mn-grid-layout-row">
     <div class="col-xs-12">
-      <mn-grid mn-select="single"
+      <mn-grid mn-id="activitiesGrid"
+               mn-select="single"
                mn-select-type="check"
                mn-on-select="ctrl.onItemSelect(selectedItems)">
         <a target="_blank" ng-href="{{ctrl.reportLocation}}/report_{{item.Order_ID}}.pdf">
