--- a/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
+++ b/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
@@ -31,7 +31,7 @@
     <div class="filter-bar-item">
       <button type="button"
               class="btn filter-bar-button"
-              ng-model="filterBar.owner.quickFilterShown"
+              ng-model="filterBar.owner.stateMachine.quickFilterShown"
               ng-click="filterBar.owner.toggleQuickFilter()"
               btn-checkbox
               btn-checkbox-true="true"
