--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -14,34 +14,34 @@
                 ng-style="{width: (field.width - 18) + 'px'}">
             {{field.header}}
           </span>
-          <span ng-show="grid.owner.column === field.name && grid.owner.fullyLoaded"
+          <span ng-show="grid.owner.stateMachine.column === field.name && grid.owner.fullyLoaded"
                 class="pull-right grid-header-field-dir "
-                ng-class="grid.owner.direction === 'desc' ? 'glyphicon glyphicon-arrow-up' : 'glyphicon glyphicon-arrow-down'"
+                ng-class="grid.owner.stateMachine.direction === 'desc' ? 'glyphicon glyphicon-arrow-up' : 'glyphicon glyphicon-arrow-down'"
                 aria-hidden="true"></span>
         </th>
         <th></th>
       </tr>
-      <tr ng-show="grid.owner.quickFilterShown">
+      <tr ng-show="grid.owner.stateMachine.quickFilterShown">
         <th ng-show="grid.showSelectColumn"></th>
         <th ng-repeat="field in grid.owner.fields">
           <mn-qf-text
                 ng-if="field.quickfilter === 'text'"
-                model="grid.owner.filters[field.name]"
+                model="grid.owner.stateMachine.filters[field.name]"
                 qf-changed="grid.filterBy(fieldName)"
                 field="field"
-                focus="grid.owner.qfFocus === field.name"></mn-qf-text>
+                focus="grid.owner.stateMachine.qfFocus === field.name"></mn-qf-text>
           <mn-qf-date-range
                 ng-if="field.quickfilter === 'date-range'"
-                model="grid.owner.filters[field.name]"
+                model="grid.owner.stateMachine.filters[field.name]"
                 qf-changed="grid.filterBy(fieldName)"
                 field="field"
-                focus="grid.owner.qfFocus === field.name"></mn-qf-date-range>
+                focus="grid.owner.stateMachine.qfFocus === field.name"></mn-qf-date-range>
           <mn-qf-select
                 ng-if="field.quickfilter === 'select'"
-                model="grid.owner.filters[field.name]"
+                model="grid.owner.stateMachine.filters[field.name]"
                 qf-changed="grid.filterBy(fieldName)"
                 field="field"
-                focus="grid.owner.qfFocus === field.name"></mn-qf-select>
+                focus="grid.owner.stateMachine.qfFocus === field.name"></mn-qf-select>
         </th>
         <th></th>
       </tr>
