--- a/app/assets/javascripts/mohican/directives/mnGridPager/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridPager/template.html
@@ -3,10 +3,10 @@
     <nav class="pointer">
       <ul class="pointer pagination pagination-sm"
           style="margin: 0px 30px;"
-          ng-class="{'client-pager': !!gridPager.owner.filters && gridPager.owner.fullyLoaded}">
-        <li class="pointer" ng-class='{disabled: gridPager.owner.page === 1}'>
+          ng-class="{'client-pager': !!gridPager.owner.stateMachine.filters && gridPager.owner.fullyLoaded}">
+        <li class="pointer" ng-class='{disabled: gridPager.owner.stateMachine.page === 1}'>
           <a ng-click="gridPager._changePage(gridPager.prevPage())"
-             ng-disabled="gridPager.owner.page === 1"
+             ng-disabled="gridPager.owner.stateMachine.page === 1"
              aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
           </a>
@@ -16,7 +16,7 @@
              ng-class="{hidden: !gridPager.showLinkFirst()}"
              aria-label="First">1</a>
         </li>
-        <li class="pointer" ng-repeat="pageNumber in gridPager.paginationArray()" ng-class="{active: pageNumber == gridPager.owner.page}">
+        <li class="pointer" ng-repeat="pageNumber in gridPager.paginationArray()" ng-class="{active: pageNumber == gridPager.owner.stateMachine.page}">
           <a ng-click="gridPager._changePage(pageNumber)">{{gridPager.showPageNumber(pageNumber, $index)}}</a>
         </li>
         <li>
@@ -24,9 +24,9 @@
              ng-class="{hidden: !gridPager.showLinkLast()}"
              aria-label="Last">{{gridPager.owner.pageCount}}</a>
         </li>
-        <li class="pointer" ng-class="{disabled: gridPager.owner.page === gridPager.owner.pageCount, hidden: !gridPager.owner.pageCount}">
+        <li class="pointer" ng-class="{disabled: gridPager.owner.stateMachine.page === gridPager.owner.pageCount, hidden: !gridPager.owner.pageCount}">
           <a ng-click="gridPager._changePage(gridPager.nextPage())"
-             ng-disabled="gridPager.owner.page === gridPager.owner.pageCount"
+             ng-disabled="gridPager.owner.stateMachine.page === gridPager.owner.pageCount"
              aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
           </a>
