state machine: toggleQf, getView and getPage
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
+++ b/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
@@ -32,7 +32,7 @@
       <button type="button"
               class="btn filter-bar-button"
               ng-model="filterBar.owner.stateMachine.quickFilterShown"
-              ng-click="filterBar.owner.toggleQuickFilter()"
+              ng-change="filterBar.owner.toggleQuickFilter()"
               btn-checkbox
               btn-checkbox-true="true"
               btn-checkbox-false="false"
