--- a/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
+++ b/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <div class="filter-bar-item">
+    <div class="filter-bar-item" ng-show="filterBar.owner.layouts.length > 1">
       <div isteven-multi-select
             class="inline-multi-select"
             input-model="filterBar.owner.layouts"
@@ -14,7 +14,7 @@
             style="width: 140px;">
       </div>
     </div>
-    <div class="filter-bar-item">
+    <div class="filter-bar-item" ng-show="filterBar.owner.backendFilters.length > 1">
       <div isteven-multi-select
             class="inline-multi-select"
             input-model="filterBar.owner.backendFilters"
