--- a/app/assets/javascripts/mohican/directives/mnQfDateRange/template.html
+++ b/app/assets/javascripts/mohican/directives/mnQfDateRange/template.html
@@ -1,4 +1,5 @@
-<input type="text"
+<input ng-disabled="qfDateRange.qfDisabled"
+       type="text"
        date-range-picker class="form-control date-picker"
        ng-model="qfDateRange.dateRange"
        ng-style="{width: (qfDateRange.field.width - 20) + 'px'}" />
