--- a/app/assets/javascripts/mohican/directives/mnQfText/template.html
+++ b/app/assets/javascripts/mohican/directives/mnQfText/template.html
@@ -1,4 +1,5 @@
-<input type="text"
+<input ng-disabled="qfText.qfDisabled"
+       type="text"
        ng-model="qfText.model"
        ng-change="qfText.inputChanged()"
        ng-style="{width: (qfText.field.width) + 'px'}"
