--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -7,8 +7,7 @@
         <col style="width: 64px;">
         <th ng-show="grid.showSelectColumn">
           <input type="checkbox"
-                 ng-model="grid.onlySelectedItemsShown"
-                 ng-click="grid.onlySelectedItemsShownChanged(item)">
+                 ng-model="grid.onlySelectedItemsShown">
         </th>
         <th ng-repeat="field in grid.owner.fields"
             ng-class="{'mn-sortable': grid.owner.fullyLoaded}"
