disable qs if selected items are shown, remove grid's service
we dont need grid's service for handling selected items because now there is no more issue with controler initialization - except(!) in case when we rerender the page after qf is toggled. I will open an new issues about fixing qf toggling.

When backend filter is changed, page controller is reinitialized, mn-grid is recreated and selected items array will be cleared, this is currently expected behavior.

Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -10,14 +10,14 @@
                  ng-model="grid.onlySelectedItemsShown">
         </th>
         <th ng-repeat="field in grid.owner.fields"
-            ng-class="{'mn-sortable': grid.owner.fullyLoaded}"
+            ng-class="{'mn-sortable': grid.owner.fullyLoaded && !grid.onlySelectedItemsShown}"
             ng-click="grid.orderBy(field)"
             class="grid-header-container">
           <span class="grid-header-field-name"
                 ng-style="{width: (field.width - 18) + 'px'}">
             {{field.header}}
           </span>
-          <span ng-show="grid.owner.stateMachine.column === field.name && grid.owner.fullyLoaded"
+          <span ng-show="grid.owner.stateMachine.column === field.name && grid.owner.fullyLoaded && !grid.onlySelectedItemsShown"
                 class="pull-right grid-header-field-dir "
                 ng-class="grid.owner.stateMachine.direction === 'desc' ? 'glyphicon glyphicon-arrow-up' : 'glyphicon glyphicon-arrow-down'"
                 aria-hidden="true"></span>
