--- a/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
+++ b/app/assets/javascripts/mohican/directives/mnFilterBar/template.html
@@ -30,7 +30,7 @@
     </div>
     <div class="filter-bar-item">
       <button type="button"
-              class="btn filter-bar-button filter-bar-button"
+              class="btn btn-primary filter-bar-button"
               ng-model="filterBar.owner.stateMachine.quickFilterShown"
               ng-change="filterBar.owner.toggleQuickFilter()"
               btn-checkbox
