no controller initialize on qf toggled
there is still a bug on angular-daterange-picker. I posted an issue on github repo and will be notified if owner fix it:
https://github.com/fragaria/angular-daterangepicker/issues/76

Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnQfDateRange/template.html
+++ b/app/assets/javascripts/mohican/directives/mnQfDateRange/template.html
@@ -1,5 +1,7 @@
 <input ng-disabled="qfDateRange.qfDisabled"
        type="text"
-       date-range-picker class="form-control date-picker"
+       date-range-picker
+       clearable="true"
+       class="form-control date-picker"
        ng-model="qfDateRange.dateRange"
        ng-style="{width: (qfDateRange.field.width - 20) + 'px'}" />
