--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -50,7 +50,7 @@
       </tr>
     </thead>
     <tbody ng-hide="grid.onlySelectedItemsShown">
-      <tr ng-repeat="item in grid.owner.items">
+      <tr ng-repeat="item in grid.owner.items" mn-right-click="grid.rightClick(item)">
         <td ng-show="grid.showSelectColumn">
           <input type="checkbox"
                  ng-checked="grid.isItemSelected(item)"
@@ -69,7 +69,7 @@
       </tr>
     </tbody>
     <tbody ng-show="grid.onlySelectedItemsShown">
-      <tr ng-repeat="item in grid.selectedItems">
+      <tr ng-repeat="item in grid.selectedItems" mn-right-click="grid.rightClick(item)">
         <td ng-show="grid.showSelectColumn">
           <input type="checkbox"
                  ng-checked="grid.isItemSelected(item)"
