--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row mn-grid-layout-row">
-    <div class="col-xs-12">
+    <div class="col-xs-12" style="position: static;">
       <mn-grid mn-select="single"
                mn-select-type="check"
                mn-on-select="ctrl.onItemSelect(selectedItems)"
