--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -104,6 +104,8 @@
 <div class="btn-group-vertical"
      role="group"
      ng-show="grid.contextMenuVisible"
-     style="position: absolute; left: {{grid.contextMenuPosition.x}}px; top: {{grid.contextMenuPosition.y}}px;">
+     style="position: absolute; left: {{grid.contextMenuPosition.x}}px; top: {{grid.contextMenuPosition.y}}px;z-index:999999;">
   <button ng-repeat="item in grid.contextMenuItems" ng-click="grid.contextMenuAction(item)" type="button" class="btn btn-default">{{item.text}}</button>
 </div>
+<div class="mn-contect-menu-cover" ng-click="grid.contextMenuVisible=false" ng-if="grid.contextMenuVisible"
+style="position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0);z-index:999998;cursor:default;">
