context menu: show it where the cursor is
Angular wants us to use ngStyle for this kind of dynamic approach
(see IE issues), and the event members we are looking for are
pageX and pageY.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -104,7 +104,7 @@
 <div class="btn-group-vertical mn-context-menu"
      role="group"
      ng-show="grid.contextMenuVisible"
-     style="left: {{grid.contextMenuPosition.x}}px; top: {{grid.contextMenuPosition.y}}px;">
+     ng-style="grid.menuPosition">
   <button ng-repeat="item in grid.contextMenuItems" ng-click="grid.contextMenuAction(item)" type="button" class="btn btn-default">{{item.text}}</button>
 </div>
 <div class="mn-context-menu-cover" ng-click="grid.contextMenuVisible=false" ng-if="grid.contextMenuVisible">
