--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -23,7 +23,7 @@
           <i class="fa fa-print fa-2x icoNormal"></i>
         </a>
         <a target="_blank" ng-click="ctrl.editItem(item)">
-          <i class="fa fa-pencil-square-o"></i>
+          <i class="fa fa-pencil-square-o fa-2x icoNormal"></i>
         </a>
       </mn-grid>
     </div>
