--- a/app/assets/javascripts/mohican/directives/mnGridPager/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridPager/template.html
@@ -1,5 +1,5 @@
-<div class="row pager-row" ng-class="{hidden: !gridPager.owner.pageCount}">
-  <div class="col-lg-12">
+<div class="row mn-pager-row" ng-class="{hidden: !gridPager.owner.pageCount}">
+  <div class="col-lg-12" style="z-index:6;">
     <nav class="pointer">
       <ul class="pointer pagination pagination-sm"
           style="margin: 0px 30px;"
@@ -33,5 +33,8 @@
         </li>
       </ul>
     </nav>
+  </div>
+  <div class="mn-content-footer-status-msg">
+    Loaded {{$parent.owner.service.buffer.length}} of {{$parent.owner.service.totalCount}} rows
   </div>
 </div>
