update ng-dialog - controllerAs syntax
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesGrid.html
+++ b/app/assets/javascripts/app/routes/activitiesGrid.html
@@ -30,6 +30,6 @@
   </div>
   <iframe id="print-f" name="print-f" src="" style="display:none;"></iframe>
 </div>
-<script type="text/ng-template" id="editItem">
-  Order_ID:{{item.Order_ID}}
+<script type="text/ng-template" id="editItemForm">
+  Order_ID:{{editItem.item.Order_ID}}
 </script>
