type fix: missing closing /div
This seems to have been internally solved by HTML template compiler,
because it works, but this is a typical HTML bug.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mnGrid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGrid/template.html
@@ -126,4 +126,4 @@
      ng-style="grid.menuPosition">
   <button ng-repeat="item in grid.contextMenuItems" ng-click="grid.contextMenuAction(item)" type="button" class="btn btn-default">{{item.text}}</button>
 </div>
-<div class="mn-context-menu-cover" ng-click="grid.contextMenuVisible=false" ng-if="grid.contextMenuVisible">
+<div class="mn-context-menu-cover" ng-click="grid.contextMenuVisible=false" ng-if="grid.contextMenuVisible"></div>
