close dialog nicely
There are two ways to close the dialog: the X button, which is currently
just red, and by explicitelly calling the closeDialog, for instance from
a button. But both methods will call the closeDialog method, so some event
can also be triggered from there some day, if needed.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/activitiesExampleDialog.html
+++ b/app/assets/javascripts/app/routes/activitiesExampleDialog.html
@@ -8,3 +8,4 @@
 <ul>
   <li ng-repeat="sel_item in ctrl.selectedItems">{{sel_item.Order_ID}}</li>
 </ul>
+<button class="btn" ng-click="ctrl.closeDialog()">Close this</button>
