--- a/app/assets/javascripts/mohican/directives/mnDialogSorcerer/template.html
+++ b/app/assets/javascripts/mohican/directives/mnDialogSorcerer/template.html
@@ -1,5 +1,5 @@
 <div class="mn-dialog-frame" ng-if="ctrl.mnDialogVisible" >
   <ng-include src="ctrl.mnDialogActiveTemplate"></ng-include>
-  <div class="mn-dialog-close-button" ng-click="ctrl.mnDialogVisible=false">
+  <div class="mn-dialog-close-button" ng-click="ctrl.closeDialog()"></div>
 </div>
 <div class="mn-dialog-frame-cover" ng-if="ctrl.mnDialogVisible"></div>
