No-margin main content layout, filter-bar dropdown style unified

--- a/app/assets/javascripts/mohican/directives/mnGridPager/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridPager/template.html
@@ -35,6 +35,6 @@
     </nav>
   </div>
   <div class="mn-content-footer-status-msg">
-    Loaded {{$parent.owner.service.buffer.length}} of {{$parent.owner.service.totalCount}} rows
+    Loaded <span class="mn-content-footer-status-msg-invert">{{$parent.owner.service.buffer.length}}</span> of {{$parent.owner.service.totalCount}} rows
   </div>
 </div>
