--- a/app/assets/javascripts/app/routes/activitiesExampleDialog.html
+++ b/app/assets/javascripts/app/routes/activitiesExampleDialog.html
@@ -1,18 +1,34 @@
-<div>
-  <strong>Clicked item:</strong>
-  <span>{{ctrl.clickedItem.Order_ID}}</span>
-</div>
-<div>
-  <strong>Selected items:</strong>
-</div>
-<ul>
-  <li ng-repeat="sel_item in ctrl.selectedItems">{{sel_item.Order_ID}}</li>
-</ul>
-<button class="btn" ng-click="ctrl.closeDialog()">Close this</button>
 <div style="width: 400px">
-  <strong>This is large text:</strong>
-  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+  <div class="row">
+    <strong class="col-xs-5">Order_ID: </strong>
+    <input type="text" disabled="disabled" name="name" value="{{ctrl.clickedItem.Order_ID}}">
+  </div>
+  <div class="row">
+    <strong class="col-xs-5">Work Order Number:</strong>
+    <input type="text" disabled="disabled" name="name" value="{{ctrl.clickedItem.WorkOrder_WorkOrderNr}}">
+  </div>
+  <div class="row">
+    <strong class="col-xs-5">Customer Name:</strong>
+    <input type="text" disabled="disabled" name="name" value="{{ctrl.clickedItem.Customer_CustomerName}}">
+  </div>
 </div>
+<hr />
+<div ng-show="ctrl.selectedItems.length > 0"
+  <div>
+    <strong>Selected items:</strong>
+  </div>
+  <table class="table">
+    <tr ng-repeat="selItem in ctrl.selectedItems">
+      <td>
+        {{selItem.Order_ID}}
+      </td>
+      <td>
+        {{selItem.WorkOrder_WorkOrderNr}}
+      </td>
+      <td>
+        {{selItem.Customer_CustomerName}}
+      </td>
+    </tr>
+  </table>
+</div>
+<button class="btn" ng-click="ctrl.closeDialog()">Close this</button>
