more awesome dialog sorcerer
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activitiesExampleDialog.html
+++ b/app/assets/javascripts/app/routes/activitiesExampleDialog.html
@@ -26,9 +26,9 @@
         {{selItem.WorkOrder_WorkOrderNr}}
       </td>
       <td>
-        {{selItem.Customer_CustomerName}}
+        {{selItem.RPU_City}}
       </td>
     </tr>
   </table>
 </div>
-<button class="btn" ng-click="ctrl.closeDialog()">Close this</button>
+<button class="btn" ng-click="ctrl.closeDialog()">Close</button>
