--- a/app/assets/javascripts/mohican/directives/mnGridPager/template.html
+++ b/app/assets/javascripts/mohican/directives/mnGridPager/template.html
@@ -1,5 +1,5 @@
 <div class="row mn-pager-row" ng-class="{hidden: !gridPager.owner.pageCount}">
-  <div class="col-lg-12" style="z-index:6;">
+  <div class="col-xs-12 col-sm-7">
     <nav class="pointer">
       <ul class="pointer pagination pagination-sm"
           style="margin: 0px 30px;"
@@ -34,7 +34,13 @@
       </ul>
     </nav>
   </div>
-  <div class="mn-content-footer-status-msg">
-    Loaded <span class="mn-content-footer-status-msg-invert">{{$parent.owner.service.buffer.length}}</span> of {{$parent.owner.service.totalCount}} rows
+  <div class="col-sm-5 hidden-xs mn-content-footer-status-msg">
+    <span ng-if="$parent.owner.totalQfCount < $parent.owner.service.totalCount">
+      <span class="mn-content-footer-status-msg-invert">{{$parent.owner.totalQfCount}}</span> documents quick filtered, of
+    </span>
+    <span ng-if="$parent.owner.service.buffer.length < $parent.owner.service.totalCount">
+      <span class="mn-content-footer-status-msg-invert">{{$parent.owner.service.buffer.length}}</span> of
+    </span>
+    {{$parent.owner.service.totalCount}} loaded
   </div>
 </div>
